Enable tests run on windows env (#339)
* Enable tests run on windows env
* re-record test in Windows
* Use reflection in comparing hotels
* Use Hotels JSON without Description_fr