@@ -34,14 +34,7 @@
         <version>3.0.0-M3</version>
         <configuration>
           <encoding>UTF-8</encoding> <!--This should be enough but doesn't work so added the next line-->
-          <argLine>
-            -Dfile.encoding=UTF-8
-            <!-- JUnit5 and Mockito use reflection to create objects. -->
-            --add-opens com.azure.core/com.azure.core=ALL-UNNAMED
-            --add-opens com.azure.core/com.azure.core.util.polling=ALL-UNNAMED
-            --add-opens com.azure.core/com.azure.core.http.policy=ALL-UNNAMED
-            --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
-          </argLine>
+          <argLine>-Dfile.encoding=UTF-8</argLine>
           <forkCount>0</forkCount>
         </configuration>
       </plugin>
